Fix: vertical align

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -490,7 +490,7 @@ ul.row {
   height: 30rem;
   width: 100%;
   object-fit: cover;
-  text-align: bottom;
+  vertical-align: bottom;
 }
 
 .card-work .card-inner {
